--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">TVReminder</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_tvfavorites">TVFavorites</string>
+    <string name="SearchShow_message">Enter Show Name</string>
+    <string name="SearchButton_message">Search</string>
 </resources>
